2005-07-04 Magnus Hagdorn
 * CF_IOrsl.py: add dataset selector
 * CF_area.py: optionally plot legend when plotting rsl locs
 * plotRSL.py: speed up RSL plotting
 * plotRSLloc.py: new prog for plotting locations of RSL data
 * setup.py: hook up plotRSLloc.py

2005-06-24 Magnus Hagdorn
 * CF_colourmap.py: round min/max for auto-colourscale
 * CF_loadfile.py: add basal shear stress, cache calculated variables, fix
   minor bug

2005-06-15 Stewart Jamieson
 * CF_proj.py: fixed bug, added function to parse ESRI projection files
 * a2c.py: new program for converting ESRI ASCII files to netCDF
 * setup.py: install a2c.py

2005-05-31 Magnus Hagdorn
 * gthf.cpt: new colourmap for geothermal heat flux
 * CF_colourmap.py: registered gthf colourmap
 * setup.py: install colourmap
 * MANIFEST: ditto
 * plotProfile.py: ignore missing variables when plotting more than
   one file

2005-05-27 Magnus Hagdorn
 * CF_loadfile.py: add virtual variable pmp -- pressure melting point of ice
 * CF_profile.py: add switch to show pmp when plotting temps
 * CF_options.py: ditto
 * CF_profilearea.py: optionally plot pmp when plotting temps
 * plotSpot.py: minor bug fix

2005-05-13 Magnus Hagdorn
 * surf_temp.cpt: new colour map for air temperatures
 * CF_colourmap.py: added surf_temp.cpt to list of known colour maps
 * setup.py: install surf_temp.cpt:
 * plot_extent.py: add profiles
 * plotProfileTS.py: plot legend

2005-04-20 Magnus Hagdorn
 * added simple prog for plotting ice extent

2005-04-18 Magnus Hagdorn
 * setup.py: bump version to 0.3
 * CF_area.py: change scaling of linear projections to 10km
 * plotEISvar.py: bug fix
 * plotProfile.py: move plot to right to make space for lables

2005-04-13 Magnus Hagdorn
 * plotCFvar.py: added switch to plot velo glyphs

2005-04-01 Magnus Hagdorn
 * CF_createfile.py: added 'VARSET' to list of non-variables for test.nc file

2005-03-29 Magnus Hagdorn
 * plotCFvar.py: plot velo fields for number of files

2005-03-23 Magnus Hagdorn